--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,38 @@
+:root {
+  font-size: 16px;
+}
+
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  padding: 0;
+  margin: 0;
+  font: 16px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
+}
+
+.scene-container {
+  background-image: url("/bg.webp"), url("/bg.png");
+  background-color: #3300ee;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+}
+
+.astro {
+  position: fixed;
+  height: auto;
+  width: 180px;
+}
+
+.progress {
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  top: 3rem;
+  right: 3rem;
+  font-size: 1.5rem;
+  color: #eee;
 }
