--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,7 @@
 doctype html
-html
+html(lang="en")
   head
-    title=title
+    title="The Stupid Hackathon Opening Ceremony"
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png")
     link(rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png")
@@ -10,5 +10,6 @@ html
     link(rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5")
     meta(name="msapplication-TileColor" content="#da532c")
     meta(name="theme-color" content="#ffffff")
+    meta(name="viewport" content="width=device-width, initial-scale=1")
   body
     block content
