--- a/views/success.pug
+++ b/views/success.pug
@@ -1,5 +1,9 @@
 extends layout
 
 block content
-  h1= Success
-  p Congrats, you fucking broke the website
+  div(class="confetti-container")
+  div(class="fire-container")
+    p(class="success-helper")
+      | Congratulations, you guys f**king broke the website.
+      br
+      | Welcome to the hackathon!
