:zap: smooth animation

--- a/views/index.pug
+++ b/views/index.pug
@@ -4,5 +4,5 @@ block content
   div(class="scene-container")
     p(class="progress") fetching...
     p(class="motif" data-text="you can do it!!") you can do it!!
-    img(src="/astronaut-torch.png" class="astro" alt="astro")
+    img(src="/astronaut-torch.png" class="astro" style="opacity: 0;" alt="astro")
     script(src="/script.js")
