--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,8 @@ extends layout
 
 block content
   div(class="scene-container")
-    p(class="progress") fetching...
+    p(class="progress-percent") fetching...
+    p(class="progress-slash") fetching...
     p(class="motif" data-text="you can do it!!") you can do it!!
     img(src="/astronaut-torch.png" class="astro" style="opacity: 0;" alt="astro")
     script(src="/script.js")
